home screen api

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>React App</title>
 </head>
 
-<body style="background: linear-gradient(to right, #B7DEED 0%, #71CEEF 25%, #21B4E2 75%, #B7DEED 100%) !important;">
+<body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
